build: jupytext file sync

--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -322,7 +322,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "8a771542",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -363,7 +365,7 @@
     "        pl.col('Science').std().alias('Science_std'),\n",
     "    )\n",
     ")\n",
-    "q.collect()\n"
+    "q.collect()"
    ]
   },
   {
@@ -721,9 +723,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "formats": "auto:percent,ipynb",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
+   "formats": "ipynb,.ju.py:percent"
   },
   "kernelspec": {
    "display_name": ".venv",
