--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "55e5431d",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "6f15d13e",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (4, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Zone</th><th>School</th><th>Name</th><th>Math</th><th>Science</th></tr><tr><td>str</td><td>list[str]</td><td>list[str]</td><td>list[i64]</td><td>list[i64]</td></tr></thead><tbody><tr><td>&quot;South&quot;</td><td>[&quot;Bayside&quot;, &quot;Rydell&quot;]</td><td>[&quot;Joe&quot;, &quot;Jakob&quot;]</td><td>[76, 56]</td><td>[68, 90]</td></tr><tr><td>&quot;East&quot;</td><td>[&quot;Shermer&quot;, &quot;Shermer&quot;]</td><td>[&quot;Jimmy&quot;, &quot;Erik&quot;]</td><td>[67, 89]</td><td>[45, 66]</td></tr><tr><td>&quot;West&quot;</td><td>[&quot;Ridgemont&quot;, &quot;Hogwarts&quot;]</td><td>[&quot;Lam&quot;, &quot;Yip&quot;]</td><td>[100, 55]</td><td>[89, 32]</td></tr><tr><td>&quot;North&quot;</td><td>[&quot;Rushmore&quot;, &quot;Rushmore&quot;, &quot;Rushmore&quot;]</td><td>[&quot;Jonny&quot;, &quot;Mary&quot;, &quot;Jim&quot;]</td><td>[78, 39, 798]</td><td>[80, 45, 80]</td></tr></tbody></table></div>"
+       "<small>shape: (4, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Zone</th><th>School</th><th>Name</th><th>Math</th><th>Science</th></tr><tr><td>str</td><td>list[str]</td><td>list[str]</td><td>list[i64]</td><td>list[i64]</td></tr></thead><tbody><tr><td>&quot;South&quot;</td><td>[&quot;Bayside&quot;, &quot;Rydell&quot;]</td><td>[&quot;Joe&quot;, &quot;Jakob&quot;]</td><td>[76, 56]</td><td>[68, 90]</td></tr><tr><td>&quot;North&quot;</td><td>[&quot;Rushmore&quot;, &quot;Rushmore&quot;, &quot;Rushmore&quot;]</td><td>[&quot;Jonny&quot;, &quot;Mary&quot;, &quot;Jim&quot;]</td><td>[78, 39, 798]</td><td>[80, 45, 80]</td></tr><tr><td>&quot;West&quot;</td><td>[&quot;Ridgemont&quot;, &quot;Hogwarts&quot;]</td><td>[&quot;Lam&quot;, &quot;Yip&quot;]</td><td>[100, 55]</td><td>[89, 32]</td></tr><tr><td>&quot;East&quot;</td><td>[&quot;Shermer&quot;, &quot;Shermer&quot;]</td><td>[&quot;Jimmy&quot;, &quot;Erik&quot;]</td><td>[67, 89]</td><td>[45, 66]</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (4, 5)\n",
@@ -257,26 +257,35 @@
        "│ str   ┆ list[str]                 ┆ list[str]                ┆ list[i64]     ┆ list[i64]    │\n",
        "╞═══════╪═══════════════════════════╪══════════════════════════╪═══════════════╪══════════════╡\n",
        "│ South ┆ [\"Bayside\", \"Rydell\"]     ┆ [\"Joe\", \"Jakob\"]         ┆ [76, 56]      ┆ [68, 90]     │\n",
-       "│ East  ┆ [\"Shermer\", \"Shermer\"]    ┆ [\"Jimmy\", \"Erik\"]        ┆ [67, 89]      ┆ [45, 66]     │\n",
-       "│ West  ┆ [\"Ridgemont\", \"Hogwarts\"] ┆ [\"Lam\", \"Yip\"]           ┆ [100, 55]     ┆ [89, 32]     │\n",
        "│ North ┆ [\"Rushmore\", \"Rushmore\",  ┆ [\"Jonny\", \"Mary\", \"Jim\"] ┆ [78, 39, 798] ┆ [80, 45, 80] │\n",
        "│       ┆ \"Rushmo…                  ┆                          ┆               ┆              │\n",
+       "│ West  ┆ [\"Ridgemont\", \"Hogwarts\"] ┆ [\"Lam\", \"Yip\"]           ┆ [100, 55]     ┆ [89, 32]     │\n",
+       "│ East  ┆ [\"Shermer\", \"Shermer\"]    ┆ [\"Jimmy\", \"Erik\"]        ┆ [67, 89]      ┆ [45, 66]     │\n",
        "└───────┴───────────────────────────┴──────────────────────────┴───────────────┴──────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q = school_df.lazy().group_by(by=\"Zone\").agg(\"School\", \"Name\", \"Math\", \"Science\")\n",
+    "q = (\n",
+    "    school_df.lazy()\n",
+    "    .group_by(by=\"Zone\")\n",
+    "    .agg(\n",
+    "        \"School\",\n",
+    "        \"Name\",\n",
+    "        \"Math\",\n",
+    "        \"Science\",\n",
+    "    )\n",
+    ")\n",
     "q.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "5d08586c",
    "metadata": {},
    "outputs": [
@@ -303,7 +312,7 @@
        "└──────┴────────────────────────┴───────────────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +321,12 @@
     "q = (\n",
     "    school_df.lazy()\n",
     "    .group_by(by=\"Zone\")\n",
-    "    .agg(\"School\", \"Name\", \"Math\", \"Science\")\n",
+    "    .agg(\n",
+    "        \"School\",\n",
+    "        \"Name\",\n",
+    "        \"Math\",\n",
+    "        \"Science\",\n",
+    "    )\n",
     "    .filter(pl.col(\"Zone\") == \"East\")\n",
     ")\n",
     "q.collect()"
@@ -362,7 +376,7 @@
     "    school_df.lazy()\n",
     "    .group_by(by=\"Zone\")\n",
     "    .agg(\n",
-    "        pl.col('Science').std().alias('Science_std'),\n",
+    "        pl.col(\"Science\").std().alias(\"Science_std\"),\n",
     "    )\n",
     ")\n",
     "q.collect()"
@@ -522,7 +536,10 @@
    ],
    "source": [
     "df_sortorder = pl.DataFrame(\n",
-    "    {\"Zone\": [\"North\", \"South\", \"East\", \"West\"], \"Zone_order\": [0, 1, 2, 3]}\n",
+    "    {\n",
+    "        \"Zone\": [\"North\", \"South\", \"East\", \"West\"],\n",
+    "        \"Zone_order\": [0, 1, 2, 3],\n",
+    "    }\n",
     ").lazy()\n",
     "\n",
     "q = (\n",
@@ -531,7 +548,7 @@
     "    .group_by(by=[\"Zone\", \"Zone_order\"])\n",
     "    .agg([pl.max(\"Science\").alias(\"Science(Max)\")])\n",
     "    .sort(\"Zone_order\")\n",
-    "   # .select(pl.exclude(\"Zone_order\"))\n",
+    "    # .select(pl.exclude(\"Zone_order\"))\n",
     ")\n",
     "q.collect()"
    ]
@@ -611,7 +628,11 @@
    ],
    "source": [
     "(\n",
-    "    pl.scan_csv(\"data/insurance.csv\").groub_by(by=\"sex\").agg([pl.col(\"charges\").sum()])\n",
+    "    pl.scan_csv(\"data/insurance.csv\")\n",
+    "    .groub_by(by=\"sex\")\n",
+    "    .agg(\n",
+    "            [pl.col(\"charges\").sum()]\n",
+    "        )\n",
     ").collect()"
    ]
   },
@@ -740,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
