--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -209,7 +209,17 @@
    ],
    "source": [
     "scores = {\n",
-    "    \"Zone\": [\"North\", \"North\", \"North\", \"South\", \"South\", \"East\", \"East\", \"West\", \"West\"],\n",
+    "    \"Zone\": [\n",
+    "        \"North\",\n",
+    "        \"North\",\n",
+    "        \"North\",\n",
+    "        \"South\",\n",
+    "        \"South\",\n",
+    "        \"East\",\n",
+    "        \"East\",\n",
+    "        \"West\",\n",
+    "        \"West\",\n",
+    "    ],\n",
     "    \"School\": [\n",
     "        \"Rushmore\",\n",
     "        \"Rushmore\",\n",
@@ -417,20 +427,19 @@
    ],
    "source": [
     "q = (\n",
-    "    school_df\n",
-    "    .lazy()\n",
-    "    .group_by(by='Zone')\n",
-    "    .agg(        \n",
+    "    school_df.lazy()\n",
+    "    .group_by(by=\"Zone\")\n",
+    "    .agg(\n",
     "        [\n",
-    "            pl.col('Science').count().alias('Number of Schools'),\n",
-    "            pl.col('Science').max().alias('Science(Max)'),\n",
-    "            pl.col('Science').min().alias('Science(Min)'),\n",
-    "            pl.col('Science').mean().alias('Science(Mean)'),\n",
-    "            pl.col('Math').max().alias('Math(Max)'),\n",
-    "            pl.col('Math').min().alias('Math(Min)'),    \n",
-    "            pl.col('Math').mean().alias('Math(Mean)'),    \n",
+    "            pl.col(\"Science\").count().alias(\"Number of Schools\"),\n",
+    "            pl.col(\"Science\").max().alias(\"Science(Max)\"),\n",
+    "            pl.col(\"Science\").min().alias(\"Science(Min)\"),\n",
+    "            pl.col(\"Science\").mean().alias(\"Science(Mean)\"),\n",
+    "            pl.col(\"Math\").max().alias(\"Math(Max)\"),\n",
+    "            pl.col(\"Math\").min().alias(\"Math(Min)\"),\n",
+    "            pl.col(\"Math\").mean().alias(\"Math(Mean)\"),\n",
     "        ]\n",
-    "    )    \n",
+    "    )\n",
     ")\n",
     "print(q.collect())"
    ]
@@ -470,21 +479,20 @@
    ],
    "source": [
     "q = (\n",
-    "    school_df\n",
-    "    .lazy()\n",
-    "    .group_by(by='Zone')\n",
-    "    .agg(        \n",
+    "    school_df.lazy()\n",
+    "    .group_by(by=\"Zone\")\n",
+    "    .agg(\n",
     "        [\n",
-    "            pl.col('Science').count().alias('Number of Schools'),\n",
-    "            pl.col('Science').max().alias('Science(Max)'),\n",
-    "            pl.col('Science').min().alias('Science(Min)'),\n",
-    "            pl.col('Science').mean().alias('Science(Mean)'),\n",
-    "            pl.col('Math').max().alias('Math(Max)'),\n",
-    "            pl.col('Math').min().alias('Math(Min)'),    \n",
-    "            pl.col('Math').mean().alias('Math(Mean)'),    \n",
+    "            pl.col(\"Science\").count().alias(\"Number of Schools\"),\n",
+    "            pl.col(\"Science\").max().alias(\"Science(Max)\"),\n",
+    "            pl.col(\"Science\").min().alias(\"Science(Min)\"),\n",
+    "            pl.col(\"Science\").mean().alias(\"Science(Mean)\"),\n",
+    "            pl.col(\"Math\").max().alias(\"Math(Max)\"),\n",
+    "            pl.col(\"Math\").min().alias(\"Math(Min)\"),\n",
+    "            pl.col(\"Math\").mean().alias(\"Math(Mean)\"),\n",
     "        ]\n",
-    "    )    \n",
-    "    .sort(by='Zone')\n",
+    "    )\n",
+    "    .sort(by=\"Zone\")\n",
     ")\n",
     "print(q.collect())"
    ]
@@ -494,12 +502,12 @@
    "id": "d5ba5f88",
    "metadata": {},
    "source": [
-    "### Here's one hack to create custom ordering : joining another dataframe and hiding an invisilbe ordering column"
+    "### Here's one hack to create custom ordering : joining another dataframe and hiding an invisible ordering column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "0182b056",
    "metadata": {},
    "outputs": [
@@ -513,23 +521,23 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (4, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Zone</th><th>Zone_order</th><th>Science(Max)</th></tr><tr><td>str</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>&quot;North&quot;</td><td>0</td><td>80</td></tr><tr><td>&quot;South&quot;</td><td>1</td><td>90</td></tr><tr><td>&quot;East&quot;</td><td>2</td><td>66</td></tr><tr><td>&quot;West&quot;</td><td>3</td><td>89</td></tr></tbody></table></div>"
+       "<small>shape: (4, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Zone</th><th>Science(Max)</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;North&quot;</td><td>80</td></tr><tr><td>&quot;South&quot;</td><td>90</td></tr><tr><td>&quot;East&quot;</td><td>66</td></tr><tr><td>&quot;West&quot;</td><td>89</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (4, 3)\n",
-       "┌───────┬────────────┬──────────────┐\n",
-       "│ Zone  ┆ Zone_order ┆ Science(Max) │\n",
-       "│ ---   ┆ ---        ┆ ---          │\n",
-       "│ str   ┆ i64        ┆ i64          │\n",
-       "╞═══════╪════════════╪══════════════╡\n",
-       "│ North ┆ 0          ┆ 80           │\n",
-       "│ South ┆ 1          ┆ 90           │\n",
-       "│ East  ┆ 2          ┆ 66           │\n",
-       "│ West  ┆ 3          ┆ 89           │\n",
-       "└───────┴────────────┴──────────────┘"
+       "shape: (4, 2)\n",
+       "┌───────┬──────────────┐\n",
+       "│ Zone  ┆ Science(Max) │\n",
+       "│ ---   ┆ ---          │\n",
+       "│ str   ┆ i64          │\n",
+       "╞═══════╪══════════════╡\n",
+       "│ North ┆ 80           │\n",
+       "│ South ┆ 90           │\n",
+       "│ East  ┆ 66           │\n",
+       "│ West  ┆ 89           │\n",
+       "└───────┴──────────────┘"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +556,7 @@
     "    .group_by(by=[\"Zone\", \"Zone_order\"])\n",
     "    .agg([pl.max(\"Science\").alias(\"Science(Max)\")])\n",
     "    .sort(\"Zone_order\")\n",
-    "    # .select(pl.exclude(\"Zone_order\"))\n",
+    "    .select(pl.exclude(\"Zone_order\"))\n",
     ")\n",
     "q.collect()"
    ]
@@ -610,59 +618,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "9709dcbf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'LazyFrame' object has no attribute 'groub_by'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/eskowronski-lutz/Documents/Programming_Langs/Python/polar-jupyter/polars-local.ju.ipynb Cell 25\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eskowronski-lutz/Documents/Programming_Langs/Python/polar-jupyter/polars-local.ju.ipynb#X53sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m (\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eskowronski-lutz/Documents/Programming_Langs/Python/polar-jupyter/polars-local.ju.ipynb#X53sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     pl\u001b[39m.\u001b[39;49mscan_csv(\u001b[39m\"\u001b[39;49m\u001b[39mdata/insurance.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39;49mgroub_by(by\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msex\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39magg([pl\u001b[39m.\u001b[39mcol(\u001b[39m\"\u001b[39m\u001b[39mcharges\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39msum()])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eskowronski-lutz/Documents/Programming_Langs/Python/polar-jupyter/polars-local.ju.ipynb#X53sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m )\u001b[39m.\u001b[39mcollect()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'LazyFrame' object has no attribute 'groub_by'"
-     ]
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>sex</th><th>charges</th></tr><tr><td>str</td><td>f64</td></tr></thead><tbody><tr><td>&quot;male&quot;</td><td>9.4348e6</td></tr><tr><td>&quot;female&quot;</td><td>8.3211e6</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2, 2)\n",
+       "┌────────┬──────────┐\n",
+       "│ sex    ┆ charges  │\n",
+       "│ ---    ┆ ---      │\n",
+       "│ str    ┆ f64      │\n",
+       "╞════════╪══════════╡\n",
+       "│ male   ┆ 9.4348e6 │\n",
+       "│ female ┆ 8.3211e6 │\n",
+       "└────────┴──────────┘"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "(\n",
     "    pl.scan_csv(\"data/insurance.csv\")\n",
-    "    .groub_by(by=\"sex\")\n",
+    "    .group_by(by=\"sex\")\n",
     "    .agg(\n",
-    "            [pl.col(\"charges\").sum()]\n",
+    "        [pl.col(\"charges\").sum()]\n",
     "        )\n",
     ").collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "988cab1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (4, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>region</th><th>male</th><th>female</th></tr><tr><td>str</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>&quot;northeast&quot;</td><td>163</td><td>161</td></tr><tr><td>&quot;northwest&quot;</td><td>161</td><td>164</td></tr><tr><td>&quot;southeast&quot;</td><td>189</td><td>175</td></tr><tr><td>&quot;southwest&quot;</td><td>163</td><td>162</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (4, 3)\n",
+       "┌───────────┬──────┬────────┐\n",
+       "│ region    ┆ male ┆ female │\n",
+       "│ ---       ┆ ---  ┆ ---    │\n",
+       "│ str       ┆ u32  ┆ u32    │\n",
+       "╞═══════════╪══════╪════════╡\n",
+       "│ northeast ┆ 163  ┆ 161    │\n",
+       "│ northwest ┆ 161  ┆ 164    │\n",
+       "│ southeast ┆ 189  ┆ 175    │\n",
+       "│ southwest ┆ 163  ┆ 162    │\n",
+       "└───────────┴──────┴────────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = (\n",
     "    pl.scan_csv(\"data/insurance.csv\")\n",
-    "    .group_by(by='region')\n",
+    "    .group_by(by=\"region\")\n",
     "    .agg(\n",
     "        [\n",
-    "            (pl.col('sex') == 'male').sum().alias('male'),\n",
-    "            (pl.col('sex') == 'female').sum().alias('female'),\n",
-    "        ]    \n",
+    "            (pl.col(\"sex\") == \"male\").sum().alias(\"male\"),\n",
+    "            (pl.col(\"sex\") == \"female\").sum().alias(\"female\"),\n",
+    "        ]\n",
     "    )\n",
-    "    .sort(by='region')\n",
+    "    .sort(by=\"region\")\n",
     ")\n",
     "q.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6dd10c26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (4, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>region</th><th>male_mean_charges</th><th>female_mean_charges</th></tr><tr><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;northeast&quot;</td><td>13854.005374</td><td>12953.203151</td></tr><tr><td>&quot;northwest&quot;</td><td>12354.119575</td><td>12479.870397</td></tr><tr><td>&quot;southeast&quot;</td><td>15879.617173</td><td>13499.669243</td></tr><tr><td>&quot;southwest&quot;</td><td>13412.883576</td><td>11274.411264</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (4, 3)\n",
+       "┌───────────┬───────────────────┬─────────────────────┐\n",
+       "│ region    ┆ male_mean_charges ┆ female_mean_charges │\n",
+       "│ ---       ┆ ---               ┆ ---                 │\n",
+       "│ str       ┆ f64               ┆ f64                 │\n",
+       "╞═══════════╪═══════════════════╪═════════════════════╡\n",
+       "│ northeast ┆ 13854.005374      ┆ 12953.203151        │\n",
+       "│ northwest ┆ 12354.119575      ┆ 12479.870397        │\n",
+       "│ southeast ┆ 15879.617173      ┆ 13499.669243        │\n",
+       "│ southwest ┆ 13412.883576      ┆ 11274.411264        │\n",
+       "└───────────┴───────────────────┴─────────────────────┘"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = (\n",
     "    pl.scan_csv(\"data/insurance.csv\")\n",
@@ -684,10 +771,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5271ddb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (4, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>region</th><th>smoker_Q_count</th><th>yes_smoker_count</th><th>no_smoker_count</th></tr><tr><td>str</td><td>u32</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>&quot;northeast&quot;</td><td>324</td><td>67</td><td>257</td></tr><tr><td>&quot;southwest&quot;</td><td>325</td><td>58</td><td>267</td></tr><tr><td>&quot;southeast&quot;</td><td>364</td><td>91</td><td>273</td></tr><tr><td>&quot;northwest&quot;</td><td>325</td><td>58</td><td>267</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (4, 4)\n",
+       "┌───────────┬────────────────┬──────────────────┬─────────────────┐\n",
+       "│ region    ┆ smoker_Q_count ┆ yes_smoker_count ┆ no_smoker_count │\n",
+       "│ ---       ┆ ---            ┆ ---              ┆ ---             │\n",
+       "│ str       ┆ u32            ┆ u32              ┆ u32             │\n",
+       "╞═══════════╪════════════════╪══════════════════╪═════════════════╡\n",
+       "│ northeast ┆ 324            ┆ 67               ┆ 257             │\n",
+       "│ southwest ┆ 325            ┆ 58               ┆ 267             │\n",
+       "│ southeast ┆ 364            ┆ 91               ┆ 273             │\n",
+       "│ northwest ┆ 325            ┆ 58               ┆ 267             │\n",
+       "└───────────┴────────────────┴──────────────────┴─────────────────┘"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = (\n",
     "    pl.scan_csv(\"data/insurance.csv\")\n",
@@ -714,20 +832,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c90414f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (4, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>region</th><th>smoker</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;northeast&quot;</td><td>67</td></tr><tr><td>&quot;northwest&quot;</td><td>58</td></tr><tr><td>&quot;southeast&quot;</td><td>91</td></tr><tr><td>&quot;southwest&quot;</td><td>58</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (4, 2)\n",
+       "┌───────────┬────────┐\n",
+       "│ region    ┆ smoker │\n",
+       "│ ---       ┆ ---    │\n",
+       "│ str       ┆ u32    │\n",
+       "╞═══════════╪════════╡\n",
+       "│ northeast ┆ 67     │\n",
+       "│ northwest ┆ 58     │\n",
+       "│ southeast ┆ 91     │\n",
+       "│ southwest ┆ 58     │\n",
+       "└───────────┴────────┘"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = (\n",
-    "    pl.scan_csv('data/insurance.csv')\n",
-    "    .group_by(by='region')\n",
-    "    .agg(\n",
-    "        [\n",
-    "            (pl.col('smoker')=='yes').sum()\n",
-    "        ]    \n",
-    "    )\n",
-    "    .sort(by='region')\n",
+    "    pl.scan_csv(\"data/insurance.csv\")\n",
+    "    .group_by(by=\"region\")\n",
+    "    .agg([(pl.col(\"smoker\") == \"yes\").sum()])\n",
+    "    .sort(by=\"region\")\n",
     ")\n",
     "q.collect()"
    ]
@@ -736,6 +881,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21320a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9cb1c95",
    "metadata": {},
    "outputs": [],
    "source": []
