feat: combination of dataframe examples

--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "8aa73999",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "import polars as pl"
+    "import polars as pl\n",
+    "import numpy as np"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "f06301d0",
    "metadata": {},
    "outputs": [],
@@ -56,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "db49043d",
+   "execution_count": 32,
+   "id": "89eaaa10",
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +86,112 @@
    ],
    "source": [
     "print(iris_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d68eeeb",
+   "metadata": {},
+   "source": [
+    "# Combining DataFrames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2acdf220",
+   "metadata": {},
+   "source": [
+    "### Joining\n",
+    "(Left, Right, Inner, Outer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1d8fcb44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (8, 4)\n",
+      "┌─────┬──────────┬───────┬─────┐\n",
+      "│ a   ┆ b        ┆ d     ┆ y   │\n",
+      "│ --- ┆ ---      ┆ ---   ┆ --- │\n",
+      "│ i64 ┆ f64      ┆ f64   ┆ str │\n",
+      "╞═════╪══════════╪═══════╪═════╡\n",
+      "│ 0   ┆ 0.622328 ┆ 1.0   ┆ A   │\n",
+      "│ 1   ┆ 0.903734 ┆ 2.0   ┆ A   │\n",
+      "│ 2   ┆ 0.525538 ┆ NaN   ┆ A   │\n",
+      "│ 3   ┆ 0.746023 ┆ NaN   ┆ B   │\n",
+      "│ 4   ┆ 0.186942 ┆ 0.0   ┆ B   │\n",
+      "│ 5   ┆ 0.15834  ┆ -5.0  ┆ C   │\n",
+      "│ 6   ┆ 0.117544 ┆ -42.0 ┆ X   │\n",
+      "│ 7   ┆ 0.109056 ┆ null  ┆ X   │\n",
+      "└─────┴──────────┴───────┴─────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "for_comb_df1 = pl.DataFrame(\n",
+    "    {\n",
+    "        \"a\": np.arange(0, 8),\n",
+    "        \"b\": np.random.rand(8),\n",
+    "        \"d\": [1, 2.0, np.NaN, np.NaN, 0, -5, -42, None],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "for_comb_df2 = pl.DataFrame(\n",
+    "    {\n",
+    "        \"x\": np.arange(0, 8),\n",
+    "        \"y\": [\"A\", \"A\", \"A\", \"B\", \"B\", \"C\", \"X\", \"X\"],\n",
+    "    }\n",
+    ")\n",
+    "joined = for_comb_df1.join(for_comb_df2, left_on=\"a\", right_on=\"x\")\n",
+    "print(joined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "809cb26b",
+   "metadata": {},
+   "source": [
+    "### Concatination \n",
+    "(Horizontal or vertical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ae62b071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (8, 5)\n",
+      "┌─────┬──────────┬───────┬─────┬─────┐\n",
+      "│ a   ┆ b        ┆ d     ┆ x   ┆ y   │\n",
+      "│ --- ┆ ---      ┆ ---   ┆ --- ┆ --- │\n",
+      "│ i64 ┆ f64      ┆ f64   ┆ i64 ┆ str │\n",
+      "╞═════╪══════════╪═══════╪═════╪═════╡\n",
+      "│ 0   ┆ 0.622328 ┆ 1.0   ┆ 0   ┆ A   │\n",
+      "│ 1   ┆ 0.903734 ┆ 2.0   ┆ 1   ┆ A   │\n",
+      "│ 2   ┆ 0.525538 ┆ NaN   ┆ 2   ┆ A   │\n",
+      "│ 3   ┆ 0.746023 ┆ NaN   ┆ 3   ┆ B   │\n",
+      "│ 4   ┆ 0.186942 ┆ 0.0   ┆ 4   ┆ B   │\n",
+      "│ 5   ┆ 0.15834  ┆ -5.0  ┆ 5   ┆ C   │\n",
+      "│ 6   ┆ 0.117544 ┆ -42.0 ┆ 6   ┆ X   │\n",
+      "│ 7   ┆ 0.109056 ┆ null  ┆ 7   ┆ X   │\n",
+      "└─────┴──────────┴───────┴─────┴─────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "stacked = for_comb_df1.hstack(for_comb_df2)\n",
+    "print(stacked)"
    ]
   },
   {
