--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -279,6 +279,148 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d5fb385",
+   "metadata": {},
+   "source": [
+    "# Quick Views\n",
+    "(Head, Tail, Sample, Describe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef51f5df",
+   "metadata": {},
+   "source": [
+    "### Some Data to Look at"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b615aae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (5, 4)\n",
+      "┌─────────┬─────────────────────┬───────┬───────┐\n",
+      "│ integer ┆ date                ┆ float ┆ words │\n",
+      "│ ---     ┆ ---                 ┆ ---   ┆ ---   │\n",
+      "│ i64     ┆ datetime[μs]        ┆ f64   ┆ str   │\n",
+      "╞═════════╪═════════════════════╪═══════╪═══════╡\n",
+      "│ 1       ┆ 2022-01-01 00:00:00 ┆ 4.0   ┆ alpha │\n",
+      "│ 2       ┆ 2022-01-02 00:00:00 ┆ 5.0   ┆ beta  │\n",
+      "│ 3       ┆ 2022-01-03 00:00:00 ┆ 6.0   ┆ gaga  │\n",
+      "│ 4       ┆ 2022-01-04 00:00:00 ┆ 7.0   ┆ delta │\n",
+      "│ 5       ┆ 2022-01-05 00:00:00 ┆ 8.0   ┆ eps   │\n",
+      "└─────────┴─────────────────────┴───────┴───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "for_desc_df = pl.DataFrame(\n",
+    "    {\n",
+    "        \"integer\": [1, 2, 3, 4, 5],\n",
+    "        \"date\": [\n",
+    "            datetime(2022, 1, 1),\n",
+    "            datetime(2022, 1, 2),\n",
+    "            datetime(2022, 1, 3),\n",
+    "            datetime(2022, 1, 4),\n",
+    "            datetime(2022, 1, 5),\n",
+    "        ],\n",
+    "        \"float\": [4.0, 5.0, 6.0, 7.0, 8.0],\n",
+    "        \"words\": [\"alpha\", \"beta\", \"gaga\", \"delta\", \"eps\"]\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(for_desc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "87eef770",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (2, 4)\n",
+      "┌─────────┬─────────────────────┬───────┬───────┐\n",
+      "│ integer ┆ date                ┆ float ┆ words │\n",
+      "│ ---     ┆ ---                 ┆ ---   ┆ ---   │\n",
+      "│ i64     ┆ datetime[μs]        ┆ f64   ┆ str   │\n",
+      "╞═════════╪═════════════════════╪═══════╪═══════╡\n",
+      "│ 1       ┆ 2022-01-01 00:00:00 ┆ 4.0   ┆ alpha │\n",
+      "│ 2       ┆ 2022-01-02 00:00:00 ┆ 5.0   ┆ beta  │\n",
+      "└─────────┴─────────────────────┴───────┴───────┘\n",
+      "shape: (2, 4)\n",
+      "┌─────────┬─────────────────────┬───────┬───────┐\n",
+      "│ integer ┆ date                ┆ float ┆ words │\n",
+      "│ ---     ┆ ---                 ┆ ---   ┆ ---   │\n",
+      "│ i64     ┆ datetime[μs]        ┆ f64   ┆ str   │\n",
+      "╞═════════╪═════════════════════╪═══════╪═══════╡\n",
+      "│ 4       ┆ 2022-01-04 00:00:00 ┆ 7.0   ┆ delta │\n",
+      "│ 5       ┆ 2022-01-05 00:00:00 ┆ 8.0   ┆ eps   │\n",
+      "└─────────┴─────────────────────┴───────┴───────┘\n",
+      "shape: (2, 4)\n",
+      "┌─────────┬─────────────────────┬───────┬───────┐\n",
+      "│ integer ┆ date                ┆ float ┆ words │\n",
+      "│ ---     ┆ ---                 ┆ ---   ┆ ---   │\n",
+      "│ i64     ┆ datetime[μs]        ┆ f64   ┆ str   │\n",
+      "╞═════════╪═════════════════════╪═══════╪═══════╡\n",
+      "│ 3       ┆ 2022-01-03 00:00:00 ┆ 6.0   ┆ gaga  │\n",
+      "│ 2       ┆ 2022-01-02 00:00:00 ┆ 5.0   ┆ beta  │\n",
+      "└─────────┴─────────────────────┴───────┴───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(for_desc_df.head(2))\n",
+    "print(for_desc_df.tail(2))\n",
+    "print(for_desc_df.sample(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bb715efd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (9, 5)\n",
+      "┌────────────┬──────────┬─────────────────────┬──────────┬───────┐\n",
+      "│ describe   ┆ integer  ┆ date                ┆ float    ┆ words │\n",
+      "│ ---        ┆ ---      ┆ ---                 ┆ ---      ┆ ---   │\n",
+      "│ str        ┆ f64      ┆ str                 ┆ f64      ┆ str   │\n",
+      "╞════════════╪══════════╪═════════════════════╪══════════╪═══════╡\n",
+      "│ count      ┆ 5.0      ┆ 5                   ┆ 5.0      ┆ 5     │\n",
+      "│ null_count ┆ 0.0      ┆ 0                   ┆ 0.0      ┆ 0     │\n",
+      "│ mean       ┆ 3.0      ┆ null                ┆ 6.0      ┆ null  │\n",
+      "│ std        ┆ 1.581139 ┆ null                ┆ 1.581139 ┆ null  │\n",
+      "│ min        ┆ 1.0      ┆ 2022-01-01 00:00:00 ┆ 4.0      ┆ alpha │\n",
+      "│ 25%        ┆ 2.0      ┆ null                ┆ 5.0      ┆ null  │\n",
+      "│ 50%        ┆ 3.0      ┆ null                ┆ 6.0      ┆ null  │\n",
+      "│ 75%        ┆ 4.0      ┆ null                ┆ 7.0      ┆ null  │\n",
+      "│ max        ┆ 5.0      ┆ 2022-01-05 00:00:00 ┆ 8.0      ┆ gaga  │\n",
+      "└────────────┴──────────┴─────────────────────┴──────────┴───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(for_desc_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51f5fc56",
    "metadata": {},
    "source": [
