feat: contexts & expressions

--- a/polars-local.ipynb
+++ b/polars-local.ipynb
@@ -421,6 +421,123 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c1bfae7",
+   "metadata": {},
+   "source": [
+    "# Contexts & Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c1a4fe49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (5, 4)\n",
+      "┌──────┬───────┬──────────┬────────┐\n",
+      "│ nrs  ┆ names ┆ random   ┆ groups │\n",
+      "│ ---  ┆ ---   ┆ ---      ┆ ---    │\n",
+      "│ i64  ┆ str   ┆ f64      ┆ str    │\n",
+      "╞══════╪═══════╪══════════╪════════╡\n",
+      "│ 1    ┆ foo   ┆ 0.034268 ┆ A      │\n",
+      "│ 2    ┆ ham   ┆ 0.905182 ┆ A      │\n",
+      "│ 3    ┆ spam  ┆ 0.819867 ┆ B      │\n",
+      "│ null ┆ egg   ┆ 0.905126 ┆ C      │\n",
+      "│ 5    ┆ null  ┆ 0.619814 ┆ B      │\n",
+      "└──────┴───────┴──────────┴────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "for_contexts_df = pl.DataFrame(\n",
+    "    {\n",
+    "        \"nrs\": [1, 2, 3, None, 5],\n",
+    "        \"names\": [\"foo\", \"ham\", \"spam\", \"egg\", None],\n",
+    "        \"random\": np.random.rand(5),\n",
+    "        \"groups\": [\"A\", \"A\", \"B\", \"C\", \"B\"],\n",
+    "    }\n",
+    ")\n",
+    "print(for_contexts_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2afac04",
+   "metadata": {},
+   "source": [
+    "### Select & With_Columns\n",
+    "> In the select context the selection applies expressions over columns. The expressions in this context must produce Series that are all the same length or have a length of 1.\n",
+    ">\n",
+    "> A Series of a length of 1 will be broadcasted to match the height of the DataFrame. Note that a select may produce new columns that are aggregations, combinations of expressions, or literals.\n",
+    "\n",
+    "`Select`: only returns columns specified  \n",
+    "`With_Columns`: adds specified columns to original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "1c659c33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (5, 5)\n",
+      "┌─────┬───────────────┬───────┬────────────┬────────┐\n",
+      "│ nrs ┆ same as above ┆ names ┆ first name ┆ 10xnrs │\n",
+      "│ --- ┆ ---           ┆ ---   ┆ ---        ┆ ---    │\n",
+      "│ i64 ┆ i64           ┆ str   ┆ str        ┆ f64    │\n",
+      "╞═════╪═══════════════╪═══════╪════════════╪════════╡\n",
+      "│ 11  ┆ 11            ┆ null  ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ 11            ┆ egg   ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ 11            ┆ foo   ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ 11            ┆ ham   ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ 11            ┆ spam  ┆ foo        ┆ 27.5   │\n",
+      "└─────┴───────────────┴───────┴────────────┴────────┘\n",
+      "shape: (5, 7)\n",
+      "┌─────┬───────┬──────────┬────────┬───────────────┬────────────┬────────┐\n",
+      "│ nrs ┆ names ┆ random   ┆ groups ┆ same as above ┆ first name ┆ 10xnrs │\n",
+      "│ --- ┆ ---   ┆ ---      ┆ ---    ┆ ---           ┆ ---        ┆ ---    │\n",
+      "│ i64 ┆ str   ┆ f64      ┆ str    ┆ i64           ┆ str        ┆ f64    │\n",
+      "╞═════╪═══════╪══════════╪════════╪═══════════════╪════════════╪════════╡\n",
+      "│ 11  ┆ null  ┆ 0.034268 ┆ A      ┆ 11            ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ egg   ┆ 0.905182 ┆ A      ┆ 11            ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ foo   ┆ 0.819867 ┆ B      ┆ 11            ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ ham   ┆ 0.905126 ┆ C      ┆ 11            ┆ foo        ┆ 27.5   │\n",
+      "│ 11  ┆ spam  ┆ 0.619814 ┆ B      ┆ 11            ┆ foo        ┆ 27.5   │\n",
+      "└─────┴───────┴──────────┴────────┴───────────────┴────────────┴────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_select = for_contexts_df.select(\n",
+    "    pl.sum(\"nrs\"), # note: that it takes original name if not given alias\n",
+    "    pl.col(\"nrs\").sum().alias(\"same as above\"), # note that the above is a shorthand for this, modulo alias\n",
+    "    pl.col(\"names\").sort(),\n",
+    "    pl.col(\"names\").head(1).alias(\"first name\"),\n",
+    "    (pl.mean(\"nrs\") * 10).alias(\"10xnrs\"),\n",
+    ")\n",
+    "print(out_select)\n",
+    "\n",
+    "\n",
+    "out_wcol = for_contexts_df.with_columns(\n",
+    "    pl.sum(\"nrs\"), # NOTE!: this ovewrites the original!\n",
+    "    pl.col(\"nrs\").sum().alias(\"same as above\"), # note that the above is a shorthand for this, modulo alias\n",
+    "    pl.col(\"names\").sort(),\n",
+    "    pl.col(\"names\").head(1).alias(\"first name\"),\n",
+    "    (pl.mean(\"nrs\") * 10).alias(\"10xnrs\"),\n",
+    ")\n",
+    "print(out_wcol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51f5fc56",
    "metadata": {},
    "source": [
