fix: corrected data install path to work with new location

--- a/notebooks/polars-local.ipynb
+++ b/notebooks/polars-local.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "8aa73999",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "import polars as pl\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import polars as pl"
    ]
   },
   {
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "f06301d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris_data = pl.read_csv(\"data/iris.csv\")"
+    "iris_data = pl.read_csv(\"../data/iris.csv\")"
    ]
   },
   {
@@ -57,30 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "89eaaa10",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape: (150, 5)\n",
-      "┌──────────────┬─────────────┬──────────────┬─────────────┬───────────┐\n",
-      "│ sepal.length ┆ sepal.width ┆ petal.length ┆ petal.width ┆ variety   │\n",
-      "│ ---          ┆ ---         ┆ ---          ┆ ---         ┆ ---       │\n",
-      "│ f64          ┆ f64         ┆ f64          ┆ f64         ┆ str       │\n",
-      "╞══════════════╪═════════════╪══════════════╪═════════════╪═══════════╡\n",
-      "│ 5.1          ┆ 3.5         ┆ 1.4          ┆ 0.2         ┆ Setosa    │\n",
-      "│ 4.9          ┆ 3.0         ┆ 1.4          ┆ 0.2         ┆ Setosa    │\n",
-      "│ 4.7          ┆ 3.2         ┆ 1.3          ┆ 0.2         ┆ Setosa    │\n",
-      "│ 4.6          ┆ 3.1         ┆ 1.5          ┆ 0.2         ┆ Setosa    │\n",
-      "│ …            ┆ …           ┆ …            ┆ …           ┆ …         │\n",
-      "│ 6.3          ┆ 2.5         ┆ 5.0          ┆ 1.9         ┆ Virginica │\n",
-      "│ 6.5          ┆ 3.0         ┆ 5.2          ┆ 2.0         ┆ Virginica │\n",
-      "│ 6.2          ┆ 3.4         ┆ 5.4          ┆ 2.3         ┆ Virginica │\n",
-      "│ 5.9          ┆ 3.0         ┆ 5.1          ┆ 1.8         ┆ Virginica │\n",
-      "└──────────────┴─────────────┴──────────────┴─────────────┴───────────┘\n"
+     "ename": "NameError",
+     "evalue": "name 'iris_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43miris_data\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'iris_data' is not defined"
      ]
     }
    ],
@@ -137,16 +126,16 @@
     "for_comb_df1 = pl.DataFrame(\n",
     "    {\n",
     "        \"a\": np.arange(0, 8),\n",
-    "        \"b\": np.random.rand(8),\n",
+    "        \"b\": np.random.default_rng(8),\n",
     "        \"d\": [1, 2.0, np.NaN, np.NaN, 0, -5, -42, None],\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
     "for_comb_df2 = pl.DataFrame(\n",
     "    {\n",
     "        \"x\": np.arange(0, 8),\n",
     "        \"y\": [\"A\", \"A\", \"A\", \"B\", \"B\", \"C\", \"X\", \"X\"],\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "joined = for_comb_df1.join(for_comb_df2, left_on=\"a\", right_on=\"x\")\n",
     "print(joined)"
@@ -157,7 +146,7 @@
    "id": "809cb26b",
    "metadata": {},
    "source": [
-    "### Concatination \n",
+    "### Concatination\n",
     "(Horizontal or vertical)"
    ]
   },
@@ -333,8 +322,8 @@
     "            datetime(2022, 1, 5),\n",
     "        ],\n",
     "        \"float\": [4.0, 5.0, 6.0, 7.0, 8.0],\n",
-    "        \"words\": [\"alpha\", \"beta\", \"gaga\", \"delta\", \"eps\"]\n",
-    "    }\n",
+    "        \"words\": [\"alpha\", \"beta\", \"gaga\", \"delta\", \"eps\"],\n",
+    "    },\n",
     ")\n",
     "\n",
     "print(for_desc_df)"
@@ -457,9 +446,9 @@
     "    {\n",
     "        \"nrs\": [1, 2, 3, None, 5],\n",
     "        \"names\": [\"foo\", \"ham\", \"spam\", \"egg\", None],\n",
-    "        \"random\": np.random.rand(5),\n",
+    "        \"random\": np.random.default_rng(5),\n",
     "        \"groups\": [\"A\", \"A\", \"B\", \"C\", \"B\"],\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "print(for_contexts_df)"
    ]
@@ -470,11 +459,15 @@
    "metadata": {},
    "source": [
     "### Select & With_Columns\n",
-    "> In the select context the selection applies expressions over columns. The expressions in this context must produce Series that are all the same length or have a length of 1.\n",
+    "> In the select context the selection applies expressions over columns.\n",
+    "> The expressions in this context must produce Seriesthat\n",
+    "> that are all the same length or have a length of 1.\n",
     ">\n",
-    "> A Series of a length of 1 will be broadcasted to match the height of the DataFrame. Note that a select may produce new columns that are aggregations, combinations of expressions, or literals.\n",
+    "> A Series of a length of 1 will be broadcasted to match the height of the DataFrame.\n",
+    "> Note that a select may produce new columns that are\n",
+    "> aggregations, combinations of expressions, or literals.\n",
     "\n",
-    "`Select`: only returns columns specified  \n",
+    "`Select`: only returns columns specified\n",
     "`With_Columns`: adds specified columns to original"
    ]
   },
@@ -517,8 +510,12 @@
    ],
    "source": [
     "out_select = for_contexts_df.select(\n",
-    "    pl.sum(\"nrs\"), # note: that it takes original name if not given alias\n",
-    "    pl.col(\"nrs\").sum().alias(\"same as above\"), # note that the above is a shorthand for this, modulo alias\n",
+    "    pl.sum(\"nrs\"),  # note: that it takes original name if not given alias\n",
+    "    pl.col(\"nrs\")\n",
+    "    .sum()\n",
+    "    .alias(\n",
+    "        \"same as above\",\n",
+    "    ),  # note that the above is a shorthand for this, modulo alias\n",
     "    pl.col(\"names\").sort(),\n",
     "    pl.col(\"names\").head(1).alias(\"first name\"),\n",
     "    (pl.mean(\"nrs\") * 10).alias(\"10xnrs\"),\n",
@@ -527,8 +524,12 @@
     "\n",
     "\n",
     "out_wcol = for_contexts_df.with_columns(\n",
-    "    pl.sum(\"nrs\"), # NOTE!: this ovewrites the original!\n",
-    "    pl.col(\"nrs\").sum().alias(\"same as above\"), # note that the above is a shorthand for this, modulo alias\n",
+    "    pl.sum(\"nrs\"),  # NOTE!: this ovewrites the original!\n",
+    "    pl.col(\"nrs\")\n",
+    "    .sum()\n",
+    "    .alias(\n",
+    "        \"same as above\",\n",
+    "    ),  # note that the above is a shorthand for this, modulo alias\n",
     "    pl.col(\"names\").sort(),\n",
     "    pl.col(\"names\").head(1).alias(\"first name\"),\n",
     "    (pl.mean(\"nrs\") * 10).alias(\"10xnrs\"),\n",
@@ -763,7 +764,8 @@
    "id": "4b5e62aa",
    "metadata": {},
    "source": [
-    "### Note: order returned by groupby is effectively random (presumably due to split-threading)"
+    "### Note: order returned by groupby is effectively random\n",
+    "###       (presumably due to split-threading)"
    ]
   },
   {
@@ -804,7 +806,7 @@
     "            pl.col(\"Math\").max().alias(\"Math(Max)\"),\n",
     "            pl.col(\"Math\").min().alias(\"Math(Min)\"),\n",
     "            pl.col(\"Math\").mean().alias(\"Math(Mean)\"),\n",
-    "        ]\n",
+    "        ],\n",
     "    )\n",
     ")\n",
     "print(q.collect())"
@@ -856,7 +858,7 @@
     "            pl.col(\"Math\").max().alias(\"Math(Max)\"),\n",
     "            pl.col(\"Math\").min().alias(\"Math(Min)\"),\n",
     "            pl.col(\"Math\").mean().alias(\"Math(Mean)\"),\n",
-    "        ]\n",
+    "        ],\n",
     "    )\n",
     "    .sort(by=\"Zone\")\n",
     ")\n",
@@ -868,7 +870,8 @@
    "id": "d5ba5f88",
    "metadata": {},
    "source": [
-    "### Here's one hack to create custom ordering : joining another dataframe and hiding an invisible ordering column"
+    "### Here's one hack to create custom ordering :\n",
+    "### joining another dataframe and hiding an invisible ordering column"
    ]
   },
   {
@@ -913,7 +916,7 @@
     "    {\n",
     "        \"Zone\": [\"North\", \"South\", \"East\", \"West\"],\n",
     "        \"Zone_order\": [0, 1, 2, 3],\n",
-    "    }\n",
+    "    },\n",
     ").lazy()\n",
     "\n",
     "q = (\n",
@@ -1022,8 +1025,8 @@
     "    pl.scan_csv(\"data/insurance.csv\")\n",
     "    .group_by(by=\"sex\")\n",
     "    .agg(\n",
-    "        [pl.col(\"charges\").sum()]\n",
-    "        )\n",
+    "        [pl.col(\"charges\").sum()],\n",
+    "    )\n",
     ").collect()"
    ]
   },
@@ -1072,7 +1075,7 @@
     "        [\n",
     "            (pl.col(\"sex\") == \"male\").sum().alias(\"male\"),\n",
     "            (pl.col(\"sex\") == \"female\").sum().alias(\"female\"),\n",
-    "        ]\n",
+    "        ],\n",
     "    )\n",
     "    .sort(by=\"region\")\n",
     ")\n",
@@ -1128,7 +1131,7 @@
     "            (pl.col(\"charges\").filter(pl.col(\"sex\") == \"female\"))\n",
     "            .mean()\n",
     "            .alias(\"female_mean_charges\"),\n",
-    "        ]\n",
+    "        ],\n",
     "    )\n",
     "    .sort(by=\"region\")\n",
     ")\n",
@@ -1181,7 +1184,7 @@
     "            pl.col(\"smoker\").count().alias(\"smoker_Q_count\"),\n",
     "            (pl.col(\"smoker\") == \"yes\").sum().alias(\"yes_smoker_count\"),\n",
     "            (pl.col(\"smoker\") == \"no\").sum().alias(\"no_smoker_count\"),\n",
-    "        ]\n",
+    "        ],\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1193,7 +1196,8 @@
    "id": "5f740d9a",
    "metadata": {},
    "source": [
-    "### NOTE: `.count()` counts all entries, `.sum()` counts all values that are true (assuming a boolean on column)"
+    "### NOTE: `.count()` counts all entries,\n",
+    "###       `.sum()` counts all values that are true (assuming a boolean on column)"
    ]
   },
   {
@@ -1266,7 +1270,7 @@
    "formats": "ipynb,.ju.py:percent"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
